--- a/app/assets/stylesheets/views/_home.css.scss
+++ b/app/assets/stylesheets/views/_home.css.scss
@@ -369,13 +369,20 @@ $home-list-avatar-padding: lines(0.25);
   background: $highlight;
 }
 
+.home-categories-container {
+  background: #fff;
+  border: 1px solid $border;
+  border-radius: 4px;
+  padding: 0.75em;
+}
+
 .home-categories-link {
   display: block;
   color: $body;
-  text-transform: uppercase;
+  text-transform: captialize;
 
   &.selected {
-    font-weight: bold;
+    font-weight: 700;
   }
 }
 
