--- a/app/views/admin/categories/new.haml
+++ b/app/views/admin/categories/new.haml
@@ -7,12 +7,13 @@
     = t("layouts.admin.admin")
     = "-"
     = t(".new_listing_category")
+.row
+  .col-3
+    = render :partial => "admin/left_hand_navigation", :locals => { :links => admin_links_for(@current_community) }
 
-= render :partial => "admin/left_hand_navigation", :locals => { :links => admin_links_for(@current_community) }
-
-.left-navi-section
-  = form_for [:admin, @category] do |form|
-    = render :partial => "admin/categories/form/category_name", :locals => { :form => form }
-    = render :partial => "admin/categories/form/category_parent", :locals => { :form => form }
-    = render :partial => "admin/categories/form/category_listing_shapes", :locals => { :form => form, shapes: shapes, selected_shape_ids: selected_shape_ids }
-    = render :partial => "admin/categories/form/buttons", :locals => { :form => form }
+  .col-9
+    = form_for [:admin, @category] do |form|
+      = render :partial => "admin/categories/form/category_name", :locals => { :form => form }
+      = render :partial => "admin/categories/form/category_parent", :locals => { :form => form }
+      = render :partial => "admin/categories/form/category_listing_shapes", :locals => { :form => form, shapes: shapes, selected_shape_ids: selected_shape_ids }
+      = render :partial => "admin/categories/form/buttons", :locals => { :form => form }
