--- a/app/views/layouts/_global_header.haml
+++ b/app/views/layouts/_global_header.haml
@@ -1,9 +1,7 @@
 -# Hide header in map view if mobile
 %header.header
   .header-wrapper
-    .header-right.header-padding.visible-tablet
-      = link_to t("homepage.index.post_new_listing"), new_listing_path, :class => "new-listing-link", :id => "new-listing-link"
-
+    
     .header-right.visible-tablet
  
 
@@ -19,7 +17,6 @@
         #header-locales-menu.toggle.header-hover{data: {toggle: '#header-locales-toggle-menu', 'toggle-position' => 'absolute'}}
           %span.header-text-link
             = current_locale_name
-            = icon_map_tag(icons, "dropdown", ["icon-dropdown"])
         #header-locales-toggle-menu.toggle-menu.header-toggle-menu-language.hidden
           = render :partial => "layouts/locale_select", :collection => available_locales, :as => :loc_array, locals: {return_after_locale_change: return_after_locale_change}
 
@@ -30,6 +27,14 @@
       .header-right
         = link_to sign_up_path, class: "header-text-link header-hover" do
           = t("header.signup")
+    .header-right
+      .header-text-link
+        Blog
+    .header-right.header-padding.visible-tablet
+      = link_to "Sell", new_listing_path, :class => "new-listing-link", :id => "new-listing-link"
+   
+
+  
 
     .header-left.hidden-tablet
       .header-menu-container.toggle.hidden{data: {toggle: '#header-menu-toggle-menu', 'toggle-position' => 'absolute'}}
@@ -50,3 +55,7 @@
      
         %i.header-wide-logo.visible-tablet
           -# Logo is here, it's a CSS background
+    .header-left.header-search.cf-clearfix.visible-tablet
+      %input{:type => "text"}
+      %button
+        = icon_tag("search", ["icon-part"])
