--- a/app/views/layouts/_global_header.haml
+++ b/app/views/layouts/_global_header.haml
@@ -4,7 +4,6 @@
     
     .header-right.visible-tablet
  
-
     - if logged_in
       .header-right
         = render :partial => "layouts/header_anchors", locals: {avatar_url: avatar_url, current_user_name: current_user_name, icons: icons}
@@ -56,6 +55,11 @@
         %i.header-wide-logo.visible-tablet
           -# Logo is here, it's a CSS background
     .header-left.header-search.cf-clearfix.visible-tablet
-      %input{:type => "text"}
-      %button
-        = icon_tag("search", ["icon-part"])
+      %form{method: "get", id: "homepage-filters"}
+        - params.except("action", "controller", "q", "lc", "ls", "view", "utf8", "boundingbox", "distance_max").each do |param, value|
+          - unless param.match(/^filter_option/) || param.match(/^checkbox_filter_option/) || param.match(/^nf_/) || param.match(/^price_/)
+            = hidden_field_tag param, value
+        = hidden_field_tag "view", @view_type
+        = text_field_tag "q", params[:q], :placeholder => "Search for tack..."
+        %button{:type => "submit"}
+          = icon_tag("search", ["icon-part"])
