--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -21,41 +21,23 @@
     = render partial: "layouts/expiration_notice",
         :locals => {external_plan_service_login_url: admin_plan_path}
 
-  - content_for(:page_content) do
+  
+  - unless params[:controller] == "homepage" && params[:action] == "index"
     %section.marketplace-lander
-      - if @big_cover_photo
-        .coverimage
-          %figure.marketplace-cover.fluidratio
-            .lander-content.marketplace-lander-content
-              = yield :title_header
-      - else
-        .coverimage
-          %figure.marketplace-cover-small.fluidratio
-          .coverimage-fade{:class => yield(:coverfade_class)}
-            %figure.marketplace-cover-small-fade.fluidratio
-        .title-container
-          .title-header-wrapper
-            .marketplace-title-header
-              = yield :title_header
+      .coverimage
+        %figure.marketplace-cover-small.fluidratio
+        .coverimage-fade{:class => yield(:coverfade_class)}
+          %figure.marketplace-cover-small-fade.fluidratio
+      .title-container
+        .title-header-wrapper
+          .marketplace-title-header
+            = yield :title_header
 
-    %article.page-content
-      .wrapper
-        = render :partial => "layouts/notifications"
-        = yield
-  -#
-    This is not pretty, but works.
-    On homepage, we want to wrap the whole page content (search bar and the "real" content) to a form, so that
-    pressing send from either search bar of filter list will send all the form fields
+  %article.page-content
+    .wrapper
+      = render :partial => "layouts/notifications"
+      = yield
 
-  - if params[:controller] == "homepage" && params[:action] == "index"
-    %form{method: "get", id: "homepage-filters"}
-      - params.except("action", "controller", "q", "lc", "ls", "view", "utf8", "boundingbox", "distance_max").each do |param, value|
-        - unless param.match(/^filter_option/) || param.match(/^checkbox_filter_option/) || param.match(/^nf_/) || param.match(/^price_/)
-          = hidden_field_tag param, value
-      = hidden_field_tag "view", @view_type
-      = content_for(:page_content)
-  - else
-    = content_for(:page_content)
   
   -# Most of the JavaScript should be for performance reasons at the end of the body
 
