--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -22,8 +22,18 @@
         :locals => {external_plan_service_login_url: admin_plan_path}
 
   
-  - unless params[:controller] == "homepage" && params[:action] == "index"
-    %section.marketplace-lander
+  - if params[:controller] == "homepage" && params[:action] == "index"
+    %section.marketplace-lander.hidden-tablet
+      .coverimage
+        %figure.marketplace-cover-small.fluidratio
+        .coverimage-fade{:class => yield(:coverfade_class)}
+          %figure.marketplace-cover-small-fade.fluidratio
+      .title-container
+        .title-header-wrapper
+          .marketplace-title-header
+            = yield :title_header
+  - else
+    %section.marketplace-lander.visible-tablet
       .coverimage
         %figure.marketplace-cover-small.fluidratio
         .coverimage-fade{:class => yield(:coverfade_class)}
