--- a/app/assets/stylesheets/mixins/default-colors.scss
+++ b/app/assets/stylesheets/mixins/default-colors.scss
@@ -55,6 +55,7 @@ $light-green: hsl(110, 38%, 76%);
 $red:         hsl($error-hue, 73.4%, 38.2%);
 $error-red:   hsl($error-hue, 73.4%, 45.2%);
 $yellow:      #D1C905;
+$white:       #f1f7ee;
 
 $cover-photo-url: "cover_photos/original/cover_photo_large.jpeg";
 $small-cover-photo-url: "cover_photos/header/default.jpg";
