--- a/app/assets/stylesheets/mixins/default-colors.scss
+++ b/app/assets/stylesheets/mixins/default-colors.scss
@@ -35,8 +35,8 @@ $primary-hue: 25;
 $notification-hue: 80;
 $error-hue: 0;
 
-$background:  #eee9de;
-$highlight:   hsl($primary-hue, 0%, 91%);
+$background:  #F1F7EE ;
+$highlight:   #6CA6C1;
 $border:      hsl($primary-hue, 0%, 76.4%);
 
 $aside:       hsl($primary-hue, 0%, 50%);
@@ -44,7 +44,7 @@ $light-body:  hsl($primary-hue, 0%, 28%);
 $body:        hsl($primary-hue, 0%, 23.6%);
 $emphasis:    hsl($primary-hue, 0%, 9%);
 
-$link:        #a64c5d;
+$link:        #fff;
 $link2:       #00a26c;
 
 $success-green: #19b400;
