--- a/app/views/homepage/index.haml
+++ b/app/views/homepage/index.haml
@@ -6,8 +6,7 @@
 
 - content_for :extra_javascript do
   - # maps.google can't be loaded twice
-  - maps_key = @current_community.google_maps_key
-  - key_param = maps_key ? "&key=#{maps_key}" : ""
+  - key_param = "&key=AIzaSyBD0dCxEL8qLH4TLaRb5Hq76WR4V1ymtlI"
   - if(location_search_in_use && @view_type.eql?("map"))
     = javascript_include_tag "https://maps.googleapis.com/maps/api/js?libraries=places#{key_param}" unless feature_enabled?(:topbar_v1)
     = javascript_include_tag "markerclusterer.js"
@@ -43,7 +42,7 @@
             = link_to "All Categories", search_path(params.merge({category: "all"})), :class => "home-categories-main #{if @selected_category.nil? then 'selected' end}"
             - @main_categories.each do |category|
               - show_subcategories = show_subcategory_list(category, Maybe(@selected_category).id.to_i.or_else(nil))
-              = link_to category.display_name(I18n.locale), search_path(params.merge({category: category})), :class => "home-categories-main #{if show_subcategories then 'selected' end} #{if category.has_subcategories? then 'has-subcategories' end}", :data => {category: category.id}
+              = link_to category.display_name(I18n.locale), marketplace_category_path({category: category}), :class => "home-categories-main #{if show_subcategories then 'selected' end} #{if category.has_subcategories? then 'has-subcategories' end}", :data => {category: category.id}
               - if category.children
                 - if show_subcategories
                   - category.children.each do |child|
