--- a/app/views/listings/new.haml
+++ b/app/views/listings/new.haml
@@ -6,8 +6,7 @@
 
 - content_for :extra_javascript do
   - maps_key = @current_community.google_maps_key
-  - key_param = maps_key ? "?key=#{maps_key}" : ""
-  = javascript_include_tag "https://maps.googleapis.com/maps/api/js#{key_param}"
+  = javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyBD0dCxEL8qLH4TLaRb5Hq76WR4V1ymtlI"
 
 - content_for :title_header do
   %h1= t("listings.new.post_a_new_listing")
