--- a/app/views/layouts/_marketplace_head.haml
+++ b/app/views/layouts/_marketplace_head.haml
@@ -59,8 +59,7 @@
   %meta{ :property => "fb:app_id", :content => "#{@current_community.facebook_connect_id}" }
 
 / CSS
-- with_stylesheet_url(@current_community) do |stylesheet_url|
-  = stylesheet_link_tag stylesheet_url
+= stylesheet_link_tag 'application'
 
 = stylesheet_link_tag "app-bundle"
 
