--- a/app/assets/stylesheets/mixins/default-colors.scss
+++ b/app/assets/stylesheets/mixins/default-colors.scss
@@ -35,17 +35,20 @@ $primary-hue: 25;
 $notification-hue: 80;
 $error-hue: 0;
 
-$background:  #F1F7EE ;
-$highlight:   #6CA6C1;
-$border:      hsl($primary-hue, 0%, 76.4%);
+$background:  #F1F7EE;
+$highlight:   #ddd;
+//$highlight: #6CA6C1;
+$border:      #e7e7e7;
 
 $aside:       hsl($primary-hue, 0%, 50%);
 $light-body:  hsl($primary-hue, 0%, 28%);
 $body:        hsl($primary-hue, 0%, 23.6%);
 $emphasis:    hsl($primary-hue, 0%, 9%);
 
-$link:        #fff;
-$link2:       #00a26c;
+$link:        $body;
+$link2:       #ddd;
+$button:      #00a26c;
+//$link2:      #00a26c;
 
 $success-green: #19b400;
 
