--- a/app/assets/stylesheets/partials/_fluid-grid-listing-image.css.scss
+++ b/app/assets/stylesheets/partials/_fluid-grid-listing-image.css.scss
@@ -15,17 +15,14 @@
   @include block-with-aspect-ratio(3/2);
 }
 
-.fluid-thumbnail-grid-image-title {
-  position: absolute;
-  bottom: 0;
-  padding: lines(0.5);
+h4.fluid-thumbnail-grid-listing-title {
+  background: white;
+  color: #6f6f6f;
+  padding: 0.25em lines(0.5) 0 lines(0.5);
+  @include ellipsis;
   line-height: 1.2em;
-}
-
-.fluid-thumbnail-grid-image-overlay {
-  @include border-top-radius($default-border-radius);
-  @include overlay;
-  @include absolutely-all;
+  font-size: 0.9em;
+  font-weight: 600;
 }
 
 .fluid-thumbnail-grid-image-image {
@@ -37,14 +34,12 @@
 }
 
 .fluid-thumbnail-grid-image-price-container {
-  @include listing-price;
-  font-size: 12px; // Quantity placeholder font-size, so that the ellipsis looks nice
-  max-width: 75%;
+  font-size: 14px; // Quantity placeholder font-size, so that the ellipsis looks nice
+  font-weight: 600;
+  padding: 0 lines(0.5) 0.25em lines(0.5);
+  background: white;
+  color: #6f6f6f;
   @include ellipsis;
-}
-
-.fluid-thumbnail-grid-image-price {
-  font-size: 18px; // Bigger size for the price
 }
 
 .fluid-thumbnail-grid-image-type {
