--- a/app/assets/stylesheets/views/_home-thumbnail-grid.css.scss
+++ b/app/assets/stylesheets/views/_home-thumbnail-grid.css.scss
@@ -8,6 +8,11 @@ $home-thumbnail-grid-avatar: 36px;
 $home-thumbnail-grid-avatar-padding: 6px;
 $home-thumbnail-grid-author: $home-thumbnail-grid-avatar + ($home-thumbnail-grid-avatar-padding * 2);
 
+.home-fluid-thumbnail-grid-item > div {
+  border: 1px solid $border;
+  box-shadow: 0 1px 3px 0 rgba(0,0,0,.1);
+}
+
 .home-fluid-thumbnail-grid-narrow {
   @include create-fluid-thumbnail-grid(home, 1, 1, 2, 3, 3, 3, 3, 3);
 }
@@ -16,34 +21,17 @@ $home-thumbnail-grid-author: $home-thumbnail-grid-avatar + ($home-thumbnail-grid
   @include create-fluid-thumbnail-grid(home, 1, 1, 2, 3, 4, 4, 4, 4);
 }
 
-.home-fluid-thumbnail-grid-author {
+.home-fluid-thumbnail-grid-listing-info {
+  border-top: 1px solid $border;
   @include border-bottom-radius($default-border-radius);
-  background-color: $highlight;
-  height: $home-thumbnail-grid-author;
-  position: relative;
+  background-color: #fff;
 }
-
-.home-fluid-thumbnail-grid-author-avatar {
-  padding: $home-thumbnail-grid-avatar-padding;
+.home-fluid-thumbnail-grid-author {
+  padding: 0.25em lines(0.5);
 }
-
-.home-fluid-thumbnail-grid-author-avatar-image {
-  @include border-radius($default-border-radius);
-  height: $home-thumbnail-grid-avatar;
-}
-
 .home-fluid-thumbnail-grid-author-name {
+  color: $aside;
   @include small-type;
-  position: absolute;
-  top: $home-thumbnail-grid-avatar-padding;
-  left: (2.5 * $home-thumbnail-grid-avatar-padding) + $home-thumbnail-grid-avatar; // 2.5 for some extra padding
-  right: $home-thumbnail-grid-avatar-padding;
-  bottom: $home-thumbnail-grid-avatar-padding;
-
-  // Vertical centering
-  line-height: $home-thumbnail-grid-avatar;
-
-  @include ellipsis;
 }
 
 .home-fluid-thumbnail-grid-details {
