--- a/app/views/homepage/_filters.haml
+++ b/app/views/homepage/_filters.haml
@@ -1,9 +1,14 @@
-- if show_price_filter || show_custom_fields
-  - if show_price_filter
-    = render :partial => "price_filter"
+%form{method: "get", id: "homepage-filters"}
+  - params.except("action", "controller", "q", "lc", "ls", "view", "utf8", "boundingbox", "distance_max").each do |param, value|
+    - unless param.match(/^filter_option/) || param.match(/^checkbox_filter_option/) || param.match(/^nf_/) || param.match(/^price_/)
+      = hidden_field_tag param, value
+  = hidden_field_tag "view", "grid"
+  - if show_price_filter || show_custom_fields
+    - if show_price_filter
+      = render :partial => "price_filter"
 
-  - if show_custom_fields
-    = render :partial => "custom_filters", locals: { filters: filters }
+    - if show_custom_fields
+      = render :partial => "custom_filters", locals: { filters: filters }
 
-  %button{type: 'submit'}
-    = t("homepage.custom_filters.update_view")
+    %button{type: 'submit'}
+      = t("homepage.custom_filters.update_view")
