--- a/app/assets/stylesheets/views/_home-thumbnail-grid.css.scss
+++ b/app/assets/stylesheets/views/_home-thumbnail-grid.css.scss
@@ -10,6 +10,7 @@ $home-thumbnail-grid-author: $home-thumbnail-grid-avatar + ($home-thumbnail-grid
 
 .home-fluid-thumbnail-grid-item > div {
   border: 1px solid $border;
+  border-radius: $default-border-radius;
   box-shadow: 0 1px 3px 0 rgba(0,0,0,.1);
 }
 
