--- a/app/assets/stylesheets/views/_home.css.scss
+++ b/app/assets/stylesheets/views/_home.css.scss
@@ -372,13 +372,14 @@ $home-list-avatar-padding: lines(0.25);
 .home-categories-container {
   background: #fff;
   border: 1px solid $border;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
   border-radius: 4px;
   padding: 0.75em;
 }
 
 .home-categories-link {
   display: block;
-  color: $body;
+  color: $aside;
   text-transform: captialize;
 
   &.selected {
