--- a/app/views/transactions/_details.haml
+++ b/app/views/transactions/_details.haml
@@ -1,18 +1,19 @@
-.message-avatar-padding
-  .row
-    .col-12
+.col-4
+  - fields = [:name, :phone, :street1, :street2, :city, :state_or_province, :postal_code, :country]
+  - if tx[:shipping_address] && tx[:shipping_address].slice(*fields).values.any?
+    %strong Shipping address
+    - fields.map do |field|
+      - if tx[:shipping_address][field].present?
+        - if tx[:shipping_address][field] == :name
+          .shipping-address-name= tx[:shipping_address][field]
+        - else
+          .shipping-address-row= tx[:shipping_address][field]
+.col-4
+  - if price_break_down_locals.present?
+    %strong Order total
+    = render partial: "transactions/price_break_down", locals: price_break_down_locals
+  - if @current_community.vat.present?
+    .message-price-vat
+      = t("conversations.show.price_excludes_vat")
 
-      %h2
-        = link_to_unless listing[:deleted], listing[:title], listing_path(id: listing[:id])
 
-      - if price_break_down_locals.present?
-        = render partial: "transactions/price_break_down", locals: price_break_down_locals
-
-      - if @current_community.vat.present?
-        .message-price-vat
-          = t("conversations.show.price_excludes_vat")
-
-      = render partial: "transactions/shipping_address", locals: { shipping_address: tx[:shipping_address] }
-
-      %div{:id => "transaction_status"}
-        = render :partial => "transactions/status/status", :locals => { :__transaction_model => transaction_model, role: role, is_author: is_author }
