--- a/app/views/inboxes/_inbox_row.haml
+++ b/app/views/inboxes/_inbox_row.haml
@@ -10,7 +10,7 @@
         .conversation-last-message-at
           = conversation[:last_activity_ago]
 
-  %div{class: payments_in_use ? "col-6" : "col-9"}
+  %div.col-6
     = link_to conversation[:path], class:(conversation[:should_notify] ? 'conversation-title-link-unread' : 'conversation-title-link') do
       - if conversation[:title].present?
         = conversation[:title]
@@ -21,23 +21,21 @@
       - if conversation[:listing_url].present?
         = t("conversations.conversation.about_listing", listing_title: link_to_unless(conversation[:listing_deleted], conversation[:listing_title], conversation[:listing_url])).html_safe
       - else
-        = t("conversations.conversation.free_message")
+        = "Conversation"
 
-  - if payments_in_use
-    .col-3
+  .col-3
+    -# Only for transactions
+    - status = conversation[:last_transition_to_state]
+    - if status.present? && status != "free"
+      - status_meta = conversation[:transitions].last[:metadata]
+      - is_author = !conversation[:current_is_starter]
+      - waiting_feedback = conversation[:waiting_feedback]
+      - other_name = conversation[:other][:display_name]
 
-      -# Only for transactions
-      - status = conversation[:last_transition_to_state]
-      - if status.present? && status != "free"
-        - status_meta = conversation[:transitions].last[:metadata]
-        - is_author = !conversation[:current_is_starter]
-        - waiting_feedback = conversation[:waiting_feedback]
-        - other_name = conversation[:other][:display_name]
+      - icon, status_description = conversation_icon_and_status(status, is_author, other_name, waiting_feedback, status_meta)
 
-        - icon, status_description = conversation_icon_and_status(status, is_author, other_name, waiting_feedback, status_meta)
-
-        .conversation-list-status-container
-          .conversation-list-status-icon
-            = icon
-          .conversation-list-status
-            = status_description
+      .conversation-list-status-container
+        .conversation-list-status-icon
+          = icon
+        .conversation-list-status
+          = status_description
