--- a/app/views/transactions/status/_status.haml
+++ b/app/views/transactions/status/_status.haml
@@ -1,10 +1,38 @@
-.conversation-status
-  - get_conversation_statuses(__transaction_model, is_author).each do |status|
-    - if status[:type] == :status_info
-      .inbox-horizontally-aligned-status
-        = render :partial => "transactions/status/status_text", :locals => { :status_info => status[:content]}
-    - else
-      - if role == :participant
-        .status-links
-          - status[:content].each do |status_link|
-            = render :partial => "transactions/status/status_link", :locals => { :conversation => __transaction_model, :status_link => status_link }
+- convo_statuses = get_conversation_statuses(__transaction_model, is_author)
+.col-12
+  .row
+    .col-4
+      .row
+        .col-6
+          = image_tag listing_image
+        .col-6
+          %div
+            %strong
+              = link_to listing.title, listing
+          %div
+            %span
+              Price:  
+              = humanized_money_with_symbol(price_break_down_locals[:subtotal])
+          %div
+            - if is_author
+              %span
+                Buyer: 
+                = link_to __transaction_model.starter.username, person_path(__transaction_model.starter.username)
+            - else 
+              %span
+                Seller: 
+                = link_to seller.username, person_path(seller.username)
+    .col-4
+    .col-4
+      - convo_statuses.each do |status|
+        - if status[:type] != :status_info
+          .status-links{style: "float: right;"}
+            - status[:content].each do |status_link|
+              = render :partial => "transactions/status/status_link", :locals => { :conversation => __transaction_model, :status_link => status_link }
+
+  .row.transaction-state-tracker
+    .col-12
+      - convo_statuses.each do |status|
+        - if status[:type] == :status_info
+          = render :partial => "transactions/status/status_text", :locals => { :status_info => status[:content]}
+       
