--- a/app/views/transactions/show.haml
+++ b/app/views/transactions/show.haml
@@ -1,12 +1,15 @@
 - content_for :title_header do
   %h1 
     = link_to_unless listing[:deleted], listing[:title], listing_path(id: listing[:id])
+    %small.title-subheader
+      = "order ##{transaction[:id]}"
+.row 
+  .col-6
+    .row.transaction-details-row
+      = render :partial => "transactions/details", locals: {role: role, tx: transaction, transaction_model: transaction_model, listing: listing, is_author: is_author, price_break_down_locals: price_break_down_locals}
 
-.row.transaction-details-row
-  = render :partial => "transactions/details", locals: {role: role, tx: transaction, transaction_model: transaction_model, listing: listing, is_author: is_author, price_break_down_locals: price_break_down_locals}
-
-.row.transaction-status-row
-  = render :partial => "transactions/status/status", :locals => { :__transaction_model => transaction_model, role: role, is_author: is_author, :listing => listing, :listing_image => listing_image, price_break_down_locals: price_break_down_locals, seller: seller}
-
-.row
-  = render :partial => "conversations/messages_and_form", locals: {role: role, message_form: message_form, message_form_action: message_form_action, messages: messages}
+    .row.transaction-status-row
+      = render :partial => "transactions/status/status", :locals => { :transaction_model => transaction_model, role: role, is_author: is_author, :listing => listing, :listing_image => listing_image, price_break_down_locals: price_break_down_locals, seller: seller}
+  .col-6
+    .row
+      = render :partial => "conversations/messages_and_form", locals: {role: role, message_form: message_form, message_form_action: message_form_action, messages: messages}
