--- a/app/views/transactions/status/_status.haml
+++ b/app/views/transactions/status/_status.haml
@@ -1,38 +1,55 @@
-- convo_statuses = get_conversation_statuses(__transaction_model, is_author)
+- convo_statuses = contextual_transaction_status(transaction_model, is_author)
 .col-12
   .row
     .col-4
-      .row
-        .col-6
-          = image_tag listing_image
-        .col-6
-          %div
-            %strong
-              = link_to listing.title, listing
-          %div
-            %span
-              Price:  
-              = humanized_money_with_symbol(price_break_down_locals[:subtotal])
-          %div
-            - if is_author
-              %span
-                Buyer: 
-                = link_to __transaction_model.starter.username, person_path(__transaction_model.starter.username)
-            - else 
-              %span
-                Seller: 
-                = link_to seller.username, person_path(seller.username)
-    .col-4
-    .col-4
-      - convo_statuses.each do |status|
-        - if status[:type] != :status_info
-          .status-links{style: "float: right;"}
-            - status[:content].each do |status_link|
-              = render :partial => "transactions/status/status_link", :locals => { :conversation => __transaction_model, :status_link => status_link }
+      = image_tag listing_image
+    .col-8
+      %div
+        %strong
+          = link_to listing.title, listing
+      %div
+        %span
+          Price:  
+          = humanized_money_with_symbol(price_break_down_locals[:subtotal])
+      %div
+        - if is_author
+          %span
+            Buyer: 
+            = link_to transaction_model.starter.username, person_path(transaction_model.starter.username)
+        - else 
+          %span
+            Seller: 
+            = link_to seller.username, person_path(seller.username)
+  -if false
+    .row  
+      .col-6
+        - convo_statuses.each do |status|
+          - if false && status[:type] != :status_info
+            .status-links{style: "float: right;"}
+              - status[:content].each do |status_link|
+                = render :partial => "transactions/status/status_link", :locals => { :conversation => transaction_model, :status_link => status_link }
 
-  .row.transaction-state-tracker
-    .col-12
-      - convo_statuses.each do |status|
-        - if status[:type] == :status_info
-          = render :partial => "transactions/status/status_text", :locals => { :status_info => status[:content]}
-       
+  .transaction-state-tracker
+    .row
+      .col-12
+        - convo_statuses.each do |status|
+          - if status[:type] == :status_info
+            = render :partial => "transactions/status/status_text", :locals => { :status_info => status[:content]}
+  - if transaction_model.current_state == 'awaiting_shipment'
+    - if is_author 
+      .transaction-seller-shipping-tracker
+        .row-header
+          %h6
+            Add Tracking Info
+          %small 
+            Enter the shipping provider and tracking number and we'll pass it along to the buyer.
+        = form_for transaction_model, :url => person_transaction_path do |f|
+          .row
+            .col-8
+              = f.label "Tracking #"
+              = f.text_field :shipping_tracking_number    
+            .col-4
+              = f.label :shipping_provider
+              = f.select :shipping_provider, options_for_select(shipping_providers),{}, class: 'form-control'    
+          .row
+            = f.submit "Add Tracking Info", class: "button"
