--- a/app/views/transactions/status/_status_link.haml
+++ b/app/views/transactions/status/_status_link.haml
@@ -1,10 +1,3 @@
-.inbox-horizontally-aligned-link
-  %a{:href => status_link[:link_href], :class => "status-link #{status_link[:link_classes]}", :data => status_link[:link_data]}
-    .content
-      - if status_link[:link_icon_tag].present?
-        = status_link[:link_icon_tag]
-      - else
-        .icon-with-text{:class => status_link[:link_icon_with_text_classes]}
-      .text-with-icon
-        = status_link[:link_text_with_icon]
+%a{:href => status_link[:link_href], :class => "status-link #{status_link[:link_classes]}", style: "display: inline-block;", :data => status_link[:link_data]}
+  = status_link[:link_text_with_icon]
 
