--- a/app/assets/stylesheets/mixins/default-colors.scss
+++ b/app/assets/stylesheets/mixins/default-colors.scss
@@ -37,6 +37,7 @@ $error-hue: 0;
 
 $background:  #F1F7EE;
 $highlight:   #ddd;
+$menu-background: #727072;
 //$highlight: #6CA6C1;
 $border:      #e7e7e7;
 
