--- a/app/assets/stylesheets/views/_listing-image-carousel.css.scss
+++ b/app/assets/stylesheets/views/_listing-image-carousel.css.scss
@@ -3,6 +3,7 @@
 
 .listing-image-carousel {
   position: relative;
+  background: #3c3c3c;
   overflow: hidden;
 
   &:hover > .listing-image-navi {
