--- a/app/views/listings/show.haml
+++ b/app/views/listings/show.haml
@@ -70,44 +70,44 @@
                         = t("listings.show.processing_uploaded_image")
                       - else
                         = t(".no_description")
-
-    .row
-      .col-12
-        - if @listing.description && !@listing.description.blank?
-          - text_with_line_breaks do
-            = @listing.description
-          - if(youtube_link_ids.present?)
-            - youtube_link_ids.each do |youtube_id|
-              .listing-description-youtube-wrapper
-                %iframe.listing-description-youtube-iframe{ title: t("listings.show.youtube_video_player"), width: 640, height:390, src: "//www.youtube.com/embed/#{ youtube_id }", frameborder: 0, allowfullscreen: true}
-
-    - @listing.custom_field_values.each do |custom_field_value|
+    .listing-extended-details.row                  
       .row
         .col-12
-          - custom_field_value.with_type do |question_type|
-            = render :partial => "listings/custom_field_partials/#{question_type}", :locals => { :custom_field_value => custom_field_value }
+          - if @listing.description && !@listing.description.blank?
+            - text_with_line_breaks do
+              = @listing.description
+            - if(youtube_link_ids.present?)
+              - youtube_link_ids.each do |youtube_id|
+                .listing-description-youtube-wrapper
+                  %iframe.listing-description-youtube-iframe{ title: t("listings.show.youtube_video_player"), width: 640, height:390, src: "//www.youtube.com/embed/#{ youtube_id }", frameborder: 0, allowfullscreen: true}
 
-    - if @current_community.show_listing_publishing_date?
-      .row
-        .col-12
-          .icon-with-text-container
-            = icon_tag("calendar", ["icon-part"])
-            .text-part
-              %b
-                = t(".listing_created_at")
-                = l @listing.created_at, :format => :short_date
+      - @listing.custom_field_values.each do |custom_field_value|
+        .row
+          .col-12
+            - custom_field_value.with_type do |question_type|
+              = render :partial => "listings/custom_field_partials/#{question_type}", :locals => { :custom_field_value => custom_field_value }
 
-    - if !@current_community.private?
-      .row
-        .col-12
-          .listing-social
-            .listing-fb-like-button
-              = facebook_like(current_user?(@listing.author))
-            .listing-tweet-button
-              = link_to("", "https://twitter.com/share", :class => "twitter-share-button", "data" => {count: "horizontal", via: (@current_community.twitter_handle || "Sharetribe"), text: @listing.title })
-              - content_for :extra_javascript do
-                :javascript
-                  !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+      - if @current_community.show_listing_publishing_date?
+        .row
+          .col-12
+            .icon-with-text-container
+              = icon_tag("calendar", ["icon-part"])
+              .text-part
+                %b
+                  = t(".listing_created_at")
+                  = l @listing.created_at, :format => :short_date
+
+      - if !@current_community.private?
+        .row
+          .col-12
+            .listing-social
+              .listing-fb-like-button
+                = facebook_like(current_user?(@listing.author))
+              .listing-tweet-button
+                = link_to("", "https://twitter.com/share", :class => "twitter-share-button", "data" => {count: "horizontal", via: (@current_community.twitter_handle || "Sharetribe"), text: @listing.title })
+                - content_for :extra_javascript do
+                  :javascript
+                    !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
 
     - unless (@listing.closed? && !current_user?(@listing.author)) || !@current_community.listing_comments_in_use
       .view-item
