--- a/app/assets/stylesheets/views/_header.css.scss
+++ b/app/assets/stylesheets/views/_header.css.scss
@@ -50,7 +50,7 @@ $elementSpacing: lines(0.5);
 
 .header-hover {
   &.toggled {
-    background-color: $light-body;
+    background-color: $menu-background;
   }
 }
 
@@ -77,7 +77,7 @@ $elementSpacing: lines(0.5);
 }
 
 @mixin header-menu-button($bgcolor) {
-  @include button($bgcolor);
+  @include button($button);
   @include header-block;
   padding-left: em(20);
   padding-right: em(20);
@@ -100,18 +100,18 @@ $elementSpacing: lines(0.5);
 }
 
 .header-menu-toggle-container {
-  @include button($highlight);
+  @include button(#064f2f);
   @include button-group-button-padding;
   height: $elementHeight;
   line-height: $buttonLineHeight;
   margin: 0;
   padding-bottom: 0;
   padding-top: 0;
-  color: $body;
+  color: white;
 
   .toggled & {
-    color: $background;
-    background-color: $light-body;
+    color: white;
+    background-color: $menu-background;
   }
 }
 
