--- a/app/views/homepage/_search_bar.haml
+++ b/app/views/homepage/_search_bar.haml
@@ -1,5 +1,10 @@
-.search-form-input.search-form-text-field
-  = text_field_tag "q", params[:q], :placeholder => (@community_customization && @community_customization.search_placeholder) || "Search for tack..."
-.search-form-input
-  %button.action-button#search-button{type: 'submit'}
-    = icon_tag("search", ["icon-part"])
+%form{method: "get", id: "homepage-filters"}
+  - params.except("action", "controller", "q", "lc", "ls", "view", "utf8", "boundingbox", "distance_max").each do |param, value|
+    - unless param.match(/^filter_option/) || param.match(/^checkbox_filter_option/) || param.match(/^nf_/) || param.match(/^price_/)
+      = hidden_field_tag param, value
+    = hidden_field_tag "view", @view_type
+  .search-form-input.search-form-text-field
+    = text_field_tag "q", params[:q], :placeholder => (@community_customization && @community_customization.search_placeholder) || "Search for tack..."
+  .search-form-input
+    %button.action-button#search-button{type: 'submit'}
+      = icon_tag("search", ["icon-part"])
