--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -2,7 +2,7 @@
   .row
     .col-3.visible-tablet
       .header-left.header-logo-container
-        = link_to landing_page_path, :id => "header-logo" do
+        = link_to search_path, :id => "header-logo" do
           %i.header-wide-logo.visible-tablet
             -# Logo is here, it's a CSS backgroun
 
