--- a/app/views/layouts/_global_header.haml
+++ b/app/views/layouts/_global_header.haml
@@ -39,7 +39,7 @@
       If necessary, the buttons will overlap with the logo. Buttons should be on top, that's
       keep the logo here after buttons
     .header-left.header-logo-container
-      = link_to landing_page_path, :class => "header-logo", :id => "header-logo" do
+      = link_to search_path, :class => "header-logo", :id => "header-logo" do
         %i.header-square-logo.hidden-tablet
           -# Logo is here, it's a CSS background
      
