--- a/app/views/listings/payment_info.haml
+++ b/app/views/listings/payment_info.haml
@@ -1,4 +1,5 @@
-= render partial: "tackhunter_benefits_banner"
+- content_for :benefits_banner do
+  = render partial: "tackhunter_benefits_banner"
 
 .centered-section
   .settings-section.payment-settings
