--- a/app/views/listings/_tackhunter_benefits_banner.haml
+++ b/app/views/listings/_tackhunter_benefits_banner.haml
@@ -1,7 +1,16 @@
 .benefits-banner.row.visible-tablet
   .col-4
     %h1.icon-tag
+    %h2
+      3% if it sells.
+    %p List as many items as you want for free. Only pay if your listing sells on Tack Hunter.
   .col-4
     %h1.icon-shield
+    %h2
+      Tack Hunter seller protection
+    %p Our platform is the safest way to sell your tack online. 
   .col-4
-    %h1.icon-phone
+    %h1.icon-heart
+    %h2
+      We're always here
+    %p Have a question? Email us at support@tackhunter.com, and we'll get back to you within the hour.
