--- a/app/assets/stylesheets/views/_listings.css.scss
+++ b/app/assets/stylesheets/views/_listings.css.scss
@@ -240,10 +240,31 @@ $listing-author-avatar-height: 108;
     padding: lines(0.5);
     h1 {
       font-size: 6em;
+    }
+    h1,h2,p,h6{
       color: white;
+    }
+    p {
+      width: 50%;
+      margin: auto;
     }
   }
   text-align: center;
   width: 100%;
 }
 
+
+.payment-info {
+  border: 1px solid $border;
+  border-radius: 4px;
+  background: white;
+  padding: lines(0.5);
+  #ask_paypal_permissions {
+    margin: auto;
+    width: 100%;
+  }
+  .payment-checklist {
+    text-align: left;
+    color: $aside;
+  }
+}
